Fix unavailability add and edit

--- a/src/views/_shared/_layout.html
+++ b/src/views/_shared/_layout.html
@@ -1,5 +1,5 @@
 {% from "./csrf.html" import csrf %}
-{% from "./formatDate.html" import formatDatePath %}
+{% from "./formatDate.html" import formatDate %}
 {% from "./inlineStyles.html" import inlineStyles %}
 
 <!DOCTYPE html>
