--- a/src/views/_shared/formatDate.html
+++ b/src/views/_shared/formatDate.html
@@ -1,7 +1,7 @@
-{% macro formatDatePath(date) %}{{
+{% macro formatDate(date, sep="-") %}{{
   [
     date.getFullYear(),
     (date.getMonth() + 1).toString().padStart(2, "0"),
     date.getDate().toString().padStart(2, "0")
-  ] | join('/')
+  ] | join(sep)
 }}{% endmacro %}
