--- a/src/views/schedule/week.html
+++ b/src/views/schedule/week.html
@@ -39,13 +39,13 @@
 
             {% if type == "dateHeader" %}
               <h2 class="text-2xl font-bold">
-                {{ formatDatePath(data) }}
+                {{ formatDate(data) }}
               </h2>
               <p>
-                <a href="/schedule/copy/{{ formatDatePath(data) }}/to/{{ formatDatePath(data) }}/">
+                <a href="/schedule/copy/{{ formatDate(data, '/') }}/to/{{ formatDate(data, '/') }}/">
                   Copy
                 </a>
-                <a href="/schedule/clear/{{ formatDatePath(data) }}/to/{{ formatDatePath(data) }}/">
+                <a href="/schedule/clear/{{ formatDate(data, '/') }}/to/{{ formatDate(data, '/') }}/">
                   Clear
                 </a>
               </p>
@@ -66,7 +66,7 @@
               </p>
               {% endif %}
               <p>
-                <a href="/shift-context/{{ data.shiftContextId }}/note/{{ formatDatePath(data.date) }}/">Edit</a>
+                <a href="/shift-context/{{ data.shiftContextId }}/note/{{ formatDate(data.date, '/') }}/">Edit</a>
               </p>
             {% endif %}
 
@@ -91,7 +91,7 @@
                   {% endfor %}
                 </ul>
               {% endif %}
-              <a href="/substitutes/{{ formatDatePath(data.date) }}/">Edit</a>
+              <a href="/substitutes/{{ formatDate(data.date, '/') }}/">Edit</a>
             {% endif %}
           </td>
         {% endfor %}
