--- a/src/views/schedule/week.html
+++ b/src/views/schedule/week.html
@@ -98,132 +98,95 @@
       </tr>
     {% endfor %}
   </table>
-{% endblock %}
 
-{% block temp %}
-  <div class="flex flex-col min-h-100 overflow-x-auto">
-    {# Column headers #}
-    <ul class="flex w-full">
-      <li class="flex-1 min-w-xs"></li>
-      {% for date in model.dates %}
-        <li class="flex-1 min-w-xs text-center text-xl font-bold">
-          {{ date }}
+  {# Schedule warnings #}
+
+  <div class="p-8 w-full">
+    <h2 class="text-2xl font-bold">
+      Warnings
+    </h2>
+    <ul class="p-4 list-disc">
+      {% for timeSlot in model.externalAssigneeWarnings %}
+        <li>
+          [Externality]
+          <a href="/team-member/{{ timeSlot.teamMember.id }}/" class="underline">{{
+            timeSlot.teamMember.fullName
+          }}</a>
+          is external and is scheduled on
+          <a href="/schedule/time-slot/{{ timeSlot.id }}" class="underline">{{
+            timeSlot.startDateTime.toLocaleString()
+          }}</a>.
+        </li>
+      {% endfor %}
+      {% for timeSlot1, timeSlot2 in model.bilocationWarnings %}
+        <li>
+          [Bilocation]
+          <a href="/team-member/{{ timeSlot.teamMember.id }}/" class="underline">{{
+            timeSlot.teamMember.fullName
+          }}</a>
+          is scheduled at both
+          <a href="/schedule/time-slot/{{ timeSlot1.id }}/" class="underline">{{
+            timeSlot1.startDateTime.toLocaleString()
+          }}</a>
+          and
+          <a href="/schedule/time-slot/{{ timeSlot2.id }}" class="underline">{{
+            timeSlot2.startDateTime.toLocaleString()
+          }}</a>.
+        </li>
+      {% endfor %}
+      {% for timeSlot in model.adultOnlyWarnings %}
+        <li>
+          [Adult Only]
+          <a href="/team-member/{{ timeSlot.teamMember.id }}/" class="underline">{{
+            timeSlot.teamMember.fullName
+          }}</a>
+          is sceduled during
+          <a href="/schedule/time-slot/{{ timeSlot.id }}/" class="underline">an 18+ time slot</a>.
+        </li>
+      {% endfor %}
+      {% for timeSlot in model.preferenceWarnings %}
+        <li>
+          [Preferences]
+          <a href="/team-member/{{ timeSlot.teamMember.id }}/" class="underline">{{
+            timeSlot.teamMember.fullName
+          }}</a>
+          is sceduled for
+          <a href="/contexts/" class="underline">{{
+            timeSlot.shiftContext.name
+          }}</a>,
+          and they have indicated this is
+          <a href="/team-member/{{ timeSlot.teamMember.id }}/preferences/" class="underline">not preferable</a>.
+        </li>
+      {% endfor %}
+      {% for timeSlot in model.availabilityWarnings %}
+        <li>
+          [Availability]
+          {{ timeSlot.teamMember.fullName }}
+          has been scheduled at
+          {{ timeSlot.startDateTime.toLocaleString() }},
+          and they are unavailabile.
+        </li>
+      {% endfor %}
+      {% for teamMember, numberOfDays in model.maxWeeklyDaysWarnings %}
+        <li>
+          [Max Weekly Days]
+          {{ teamMember.fullName }}
+          has been sceduled on
+          {{ numberOfDays }}
+          days(s), and their maximum is
+          {{ teamMember.maxWeekyDays }}.
+        </li>
+      {% endfor %}
+      {% for teamMember, numberOfHours in model.maxWeeklyHoursWarnings %}
+        <li>
+          [Max Weeky Hours]
+          {{ teamMember.fullName }}
+          has been scheduled to work
+          {{ numberOfHours }}
+          hours this week, and their maximum is
+          {{ teamMember.maxWeeklyHours }}.
         </li>
       {% endfor %}
     </ul>
-
-    {# Column header buttons #}
-    <ul class="flex w-full pt-4">
-      <li class="flex-1 min-w-xs">
-        <a class="block w-fit p-2 pr-4 ml-4 bg-blue-400 text-white rounded" href="/schedule/time-slot/add/">
-          &plus; Add time slot
-        </a>
-      </li>
-      {% for date in model.dates %}
-        <li class="flex-1 min-w-xs flex gap-2 justify-center">
-          {% set formatted = [
-              date.getFullYear(),
-              "/",
-              (date.getMonth() + 1).toString().padStart(2, "0"),
-              "/",
-              date.getDate().toString().padStart(2, "0")
-            ] | join %}
-          {% set copyUrl = ["/schedule/copy/", formatted, "/to/", formatted, "/"] | join %}
-          {% set clearUrl = ["/schedule/clear/", formatted, "/to/", formatted, "/"] | join %}
-          <a href="{{ copyUrl }}" class="block p-2 border rounded">
-            Copy
-          </a>
-          <a href="{{ clearUrl }}" class="block p-2 border rounded">
-            Clear
-          </a>
-        </li>
-      {% endfor %}
-    </ul>
-
-    {% for shiftContextData in model.schedule.shiftContextData %}
-      <div class="flex w-full">
-        <h2 class="flex-1 min-w-xs p-4 text-2xl font-bold">
-          {{ shiftContextData.shiftContext.name }}
-        </h2>
-        {% for dailyEntry in shiftContextData.dailyEntries %}
-          <div class="flex-1 min-w-xs pt-2">
-
-            {# Shift context note card #}
-
-            <div class="p-2 my-4 mx-2 border rounded flex gap-2">
-              {% set hex = dailEntry.shiftContextNote.colorHex %}
-              {% set shiftContextId = dailyEntry.shiftContextNote.shiftContextId %}
-              {% set date = dailyEntry.shiftContextNote.date %}
-              {{ dailyEntry.shiftContextNote.date }}
-              {% set formatted = [
-                date.getFullYear(),
-                "/",
-                (date.getMonth() + 1).toString().padStart(2, "0"),
-                "/",
-                date.getDate().toString().padStart(2, "0")
-              ] | join %}
-              <div class="flex-1" {{ (["style", "=", '"background-color: #', hex, ';"'] | join | safe) if hex }}>
-                {{ dailyEntry.shiftContextNote.note }}
-              </div>
-              <a href="/shift-context/{{ shiftContextId }}/note/{{ formatted }}/" class="w-fit px-2 py-1 mx-auto border rounded">
-                Edit
-              </a>
-            </div>
-
-            {# Time slot card #}
-
-            {% for timeSlot in dailyEntry.timeSlots %}
-              <div class="p-2 my-4 mx-2 border rounded">
-                <div>
-                  {{ timeSlot.startTimeString }} to {{ timeSlot.endTimeString }}
-                </div>
-                <div>
-                  <input type="checkbox" id="{{ timeSlot.id }}_requiresAdult" {{ "checked" if timeSlot.requiresAdult }} disabled />
-                  <label for="{{ timeSlot.id }}_requiresAdult">Requires adult</label>
-                </div>
-                <div>
-                  {{ timeSlot.teamMember.fullName if timeSlot.teamMember.fullName else "(No assignee)" }}
-                </div>
-                <div {{ ["style", "=", '"background-color: #', timeSlot.color.hex, ';"'] | join | safe }}>
-                  {{ timeSlot.note }}
-                </div>
-                <div class="pt-2 text-center">
-                  <a href="/schedule/time-slot/{{ timeSlot.id }}/" class="inline-block px-2 py-1 border rounded">
-                    Edit
-                  </a>
-                  <a href="/schedule/time-slot/{{ timeSlot.id }}/delete/" class="inline-block px-2 py-1 border rounded">
-                    Delete
-                  </a>
-                </div>
-              </div>
-            {% endfor %}
-          </div>
-        {% endfor %}
-
-      </div>
-    {% endfor %}
-
-    <div class="flex w-full">
-      <h2 class="flex-1 min-w-xs p-4 text-2xl font-bold">
-        Substitutes
-      </h2>
-
-      {% for substitutes in model.schedule.substitutes %}
-
-        {# Substitutes card #}
-      
-        <div class="flex-1 min-w-xs">
-          <div class="p-2 my-4 mx-2 border rounded">
-            <ul>
-              {% for substitute in substitutes %}
-                <li>
-                  {{ substitute.teamMember.fullName }}
-                </li>
-              {% endfor %}
-            </ul>
-          </div>
-        </div>
-
-      {% endfor %}
-    </div>
+  </div>
 {% endblock %}
