--- a/src/views/schedule/week.html
+++ b/src/views/schedule/week.html
@@ -75,13 +75,13 @@
 
             {% if type == "ShiftContextNote" %}
               {% if data.color.hex %}
-              <p style="background-color: {{ ['#', data.color.hex] | join }}">
-                {{ data.note }}
-              </p>
+                <p {{ ['style="background-color: ', '#', data.color.hex, '"'] | join | safe }} >
+                  {{ data.note }}
+                </p>
               {% else %}
-              <p>
-                {{ data.note }}
-              </p>
+                <p>
+                  {{ data.note }}
+                </p>
               {% endif %}
               <p>
                 <a href="/shift-context/{{ data.shiftContextId }}/note/{{ formatDate(data.date, '/') }}/">Edit</a>
