Add testing code

--- a/src/views/_shared/_layout.html
+++ b/src/views/_shared/_layout.html
@@ -35,7 +35,7 @@
         </ul>
       </nav>
     </header>
-    <main class="flex-1 shrink-0">
+    <main class="flex-1 shrink-0 px-8 pb-8">
       {% block content %}{% endblock %}
     </main>
     <footer class="p-8 text-center">
