--- a/src/views/color/list.html
+++ b/src/views/color/list.html
@@ -1,5 +1,7 @@
 {% extends "../_shared/_layout.html" %}
 
+{% block title %}Colors{% endblock %}
+
 {% block styles %}
   <link rel="stylesheet" href="/css/colorPages.css" />
 {% endblock %}
