--- a/src/views/substitute/edit.html
+++ b/src/views/substitute/edit.html
@@ -1,12 +1,16 @@
 {% extends "../_shared/_layout.html" %}
 
-{% set title = "Substitutes " + model.substituteList.date %}
+{% set title = "Substitutes" %}
 
 {% block title %}{{ title }}{% endblock %}
 
 {% block content %}
-  <h1>{{ title }}</h1>
-  <form method="post">
+  <h1 class="text-4xl mt-8 font-bold">{{ title }}</h1>
+  <form method="post" class="max-w-md">
+    <div class="flex my-4">
+      <div class="flex-1">Date</div>
+      <div class="flex-1">{{ model.substituteList.date.toLocaleDateString() }}</div>
+    </div>
     {% for teamMember in model.teamMembers %}
       <div>
         <input type="checkbox" name="{{ teamMember.id }}" id="{{ teamMember.id }}"
@@ -14,10 +18,10 @@
         <label for="{{ teamMember.id }}">{{ teamMember.fullName }}</label>
       </div>
     {% endfor %}
-    <div>
+    <div class="mt-4 flex justify-center gap-4">
       {{ csrf(model) }}
-      <input type="submit" value="Save" />
-      <a href="/schedule/{{ formatDate(model.substituteList.date, '/') }}/">Cancel</a>
+      <input type="submit" value="Save" class="block p-4 bg-green-300 rounded"/>
+      <a href="/schedule/{{ formatDate(model.substituteList.date, '/') }}/" class="block p-4 bg-gray-300 rounded">Cancel</a>
     </div>
   </form>
 {% endblock %}
