--- a/src/views/timeSlot/assigneeRecommendations.html
+++ b/src/views/timeSlot/assigneeRecommendations.html
@@ -5,14 +5,16 @@
   "unknown": "❓"
 } %}
 
-<div>
-  <label for="teamMemberId_0">Unassigned</label>
-  <input type="radio" name="teamMemberId" value="" id="teamMemberId_0"
-    {{ "checked" if model.timeSlot.teamMemberId == null }} />
+<div class="flex max-w-lg">
+  <label for="teamMemberId_0" class="flex-1">Unassigned</label>
+  <div class="flex-1">
+    <input type="radio" name="teamMemberId" value="" id="teamMemberId_0"
+      {{ "checked" if model.timeSlot.teamMemberId == null }} />
+  </div>
 </div>
-<table>
+<table class="mt-4 border">
   <thead>
-    <tr>
+    <tr class="border-b">
       <td class="p-2"></td>
       <td class="p-2">Team Member</td>
       <td class="p-2">Adult</td>
